# api/swagger.yaml
@@ -199,7 +199,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error' 
 
-  /api/subscriptions/total-cost:
+  /api/subscriptions/cost/total:
     get:
       summary: Получение суммарной стоимости подписок за период с фильтрацией по uuid пользователя и сервису (хотя бы 1 фильтр обязателен)
       parameters:
@@ -236,7 +236,10 @@ paths:
           content:
             application/json:
               schema:
-                type: integer
+                type: object
+                properties:
+                  total_cost:
+                    type: integer
         '400':
           description: Неверный запрос
           content:
